Enable Disable Data Sources
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39983

--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Views/DataSourceManagement.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Views/DataSourceManagement.html
@@ -35,6 +35,7 @@
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="searchClicked" isasynchronous="true"></vr-button>
                     <vr-button type="Add" data-onclick="AddNewDataSource" haspermission="hasAddDataSource"></vr-button>
+                    <vr-button type="Disable All" data-onclick="DisableAllDataSources"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
