--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlan.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlan.html
@@ -13,9 +13,8 @@
             </vr-row>
 
             <vr-row>
-                <vr-validation-group validationcontext="SearchGroup">
-                    <vr-validation-group validationcontext="SellGroup">
-
+                <vr-validation-group validationcontext="LoadGroup">
+                    <vr-validation-group validationcontext="OwnerGroup">
                         <span ng-show="isSettingsSelected">
                             <vr-whs-sales-ownertype-selector on-ready="onOwnerTypeSelectorReady"
                                                              onselectionchanged="onOwnerTypeChanged"
@@ -45,11 +44,15 @@
                                                                hideremoveicon>
                             </vr-whs-be-carrieraccount-selector>
                         </span>
-
-                        <span ng-show="isSettingsSelected && showCarrierAccountSelector">
-                            <vr-common-currency-selector on-ready="onCurrencySelectorReady" normal-col-num="2" onselectionchanged="onCurrencyChanged" isrequired="showCarrierAccountSelector"></vr-common-currency-selector>
-                        </span>
                     </vr-validation-group>
+
+                    <span ng-show="isSettingsSelected && showCarrierAccountSelector">
+                        <vr-common-currency-selector on-ready="onCurrencySelectorReady"
+                                                     normal-col-num="2"
+                                                     onselectionchanged="onCurrencyChanged"
+                                                     isrequired="showCarrierAccountSelector">
+                        </vr-common-currency-selector>
+                    </span>
 
                     <vr-columns colnum="2" ng-show="isSettingsSelected">
                         <vr-whs-routing-routingdatabase-selector on-ready="onDatabaseSelectorReady"
@@ -84,15 +87,12 @@
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
-                    <vr-button type="Load" validationcontext="SearchGroup" data-onclick="load"></vr-button>
-                    <vr-button type="ManageSellingCountries" validationcontext="SellGroup" data-onclick="sellNewCountries" ng-show="showCarrierAccountSelector"></vr-button>
-                    <vr-button type="Save" menuactions="saveButtonMenuActions" ng-show="showSaveButton"></vr-button>
-                    
-					<vr-button type="BulkActions" data-onclick="openBulkActionWizard" ng-show="showSettingsButton"></vr-button>
-					<vr-button type="Settings" data-onclick="editSettings" ng-show="showSettingsButton"></vr-button>
-					
-					<vr-button type="Apply" data-onclick="applyCalculatedRates" ng-show="showApplyButton"></vr-button>
-                    <vr-button type="CancelChanges" data-onclick="deleteDraft" ng-show="showCancelButton"></vr-button>
+                    <vr-button type="Load" validationcontext="LoadGroup" data-onclick="load"></vr-button>
+                    <vr-button type="Settings" data-onclick="editSettings"></vr-button>
+                    <vr-button type="BulkActions" validationcontext="LoadGroup" data-onclick="openBulkActionWizard"></vr-button>
+                    <vr-button type="ManageSellingCountries" validationcontext="OwnerGroup" ng-show="showCarrierAccountSelector" data-onclick="sellNewCountries"></vr-button>
+                    <vr-button type="Save" validationcontext="OwnerGroup" menuactions="saveButtonMenuActions"></vr-button>
+                    <vr-button type="CancelChanges" ng-show="showCancelButton" data-onclick="deleteDraft"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
