Implementing financial account validation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39997

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/Templates/FinancialAccountSearch.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/Templates/FinancialAccountSearch.html
@@ -1,6 +1,6 @@
 ﻿<vr-row removeline vr-loader="isLoading">
-    <vr-columns width="normal">
-        <vr-button type="Add" standalone data-onclick="addFinancialAccount"></vr-button>
+    <vr-columns width="normal" >
+        <vr-button type="Add" standalone data-onclick="addFinancialAccount" vr-disabled="!showAddButton"></vr-button>
     </vr-columns>
 </vr-row>
 <vr-row removeline>
