--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/CustomerPostpaid/Templates/CustomerPostpaidSettings.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/CustomerPostpaid/Templates/CustomerPostpaidSettings.html
@@ -2,4 +2,8 @@
     <vr-columns width="1/2row">
         <vr-textbox value="scopeModel.creditLimit" isrequired="true" type="number" label="Credit Limit"></vr-textbox>
     </vr-columns>
+    <vr-columns width="1/2row">
+        <vr-label>Currency</vr-label><br />
+        <vr-label >{{scopeModel.currencyName}}</vr-label>
+    </vr-columns>
 </vr-row>
