--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/Netting/Templates/NettingSettings.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/Netting/Templates/NettingSettings.html
@@ -3,6 +3,14 @@
         <vr-textbox value="scopeModel.customerCreditLimit" isrequired="true" type="number" label="Customer Credit Limit"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/2row">
+        <vr-label>Customer Currency</vr-label><br />
+        <vr-label>{{scopeModel.currencyName}}</vr-label>
+    </vr-columns>
+    <vr-columns width="1/2row">
         <vr-textbox value="scopeModel.supplierCreditLimit" isrequired="true" type="number" label="Supplier Credit Limit"></vr-textbox>
+    </vr-columns>
+    <vr-columns width="1/2row">
+        <vr-label>Supplier Currency</vr-label><br />
+        <vr-label>{{scopeModel.currencyName}}</vr-label>
     </vr-columns>
 </vr-row>
