--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Views/FinancialAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Views/FinancialAccountEditor.html
@@ -3,8 +3,8 @@
         <vr-form name="formFinancialAccountEditor">
             <vr-tabs>
                 <vr-tab header="'Definition'">
-                    <vr-row removeline>
-                        <vr-accountbalance-accounttype-selector on-ready="scopeModel.onFinancialAccountTypeSelectorReady" selectedvalues="scopeModel.selectedFinancialAccountType" onselectionchanged=" scopeModel.onFinancialAccountTypeSelectionChanged" normal-col-num="6" isrequired="true"></vr-accountbalance-accounttype-selector>
+                    <vr-row removeline >
+                        <vr-accountbalance-accounttype-selector vr-disabled="scopeModel.isEditMode" on-ready="scopeModel.onFinancialAccountTypeSelectorReady" selectedvalues="scopeModel.selectedFinancialAccountType" onselectionchanged=" scopeModel.onFinancialAccountTypeSelectionChanged" normal-col-num="6" isrequired="true" customlabel="Financial Account Type"></vr-accountbalance-accounttype-selector>
                     </vr-row>
                     <vr-directivewrapper ng-if="scopeModel.financialAccountTypeRuntimeDirective != undefined" vr-loader="scopeModel.isLoadingDirective" directive="scopeModel.financialAccountTypeRuntimeDirective"
                                          on-ready="scopeModel.onDirectiveReady" isrequired="true">
@@ -13,10 +13,10 @@
                 <vr-tab header="'Time Settings'">
                     <vr-row removeline>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="date" label="BED" isrequired></vr-datetimepicker>
+                            <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="date" label="BED" isrequired customvalidate="scopeModel.validateDates()"></vr-datetimepicker>
                         </vr-columns>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="date" label="EED"></vr-datetimepicker>
+                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="date" label="EED" customvalidate="scopeModel.validateDates()"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
