refactoring netting and js files
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40012

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/Netting/Templates/NettingSettings.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/Netting/Templates/NettingSettings.html
@@ -6,6 +6,8 @@
         <vr-label>Customer Currency</vr-label><br />
         <vr-label>{{scopeModel.currencyName}}</vr-label>
     </vr-columns>
+</vr-row>
+<vr-row>
     <vr-columns width="1/2row">
         <vr-textbox value="scopeModel.supplierCreditLimit" isrequired="true" type="number" label="Supplier Credit Limit"></vr-textbox>
     </vr-columns>
