--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Package/Templates/PackageGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Package/Templates/PackageGridTemplate.html
@@ -9,4 +9,7 @@
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.PackageId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
