refactoring and fixing some issues
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40039

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/Templates/FinancialAccountGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/Templates/FinancialAccountGridTemplate.html
@@ -2,9 +2,10 @@
              pagingtype="'PagingOnScroll'"
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.gridMenuActions"
-             datasource="scopeModel.financialAccounts">
+             datasource="scopeModel.financialAccounts"
+             idfield="Entity.FinancialAccountId">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.FinancialAccountId'" widthfactor="'10'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Name'" field="'AccountTypeDescription'" widthfactor="'20'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Datetime'" widthfactor="'20'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Datetime'" widthfactor="'20'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Financial Account Type'" field="'AccountTypeDescription'" widthfactor="'20'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'" widthfactor="'20'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Date'" widthfactor="'20'"></vr-datagridcolumn>
 </vr-datagrid>
