--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
@@ -5,11 +5,11 @@
                 <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
             </vr-columns>
         </vr-row>
+    </vr-tab>
+    <vr-tab header="'Settings'">
         <vr-row>
             <vr-notification-vrnotifivationtype-settings on-ready="scopeModel.onVRNotificationTypeSettingsSelectorReady"
-                                                         isrequired="true"
-                                                         normal-col-num="6"
-                                                         ismultipleselection>
+                                                         isrequired="true" normal-col-num="6" ismultipleselection>
             </vr-notification-vrnotifivationtype-settings>
         </vr-row>
     </vr-tab>
