--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/ProcessInput/Templates/DAProfCalcGenerateAlertProcessInputTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/ProcessInput/Templates/DAProfCalcGenerateAlertProcessInputTemplate.html
@@ -3,11 +3,11 @@
         <vr-notification-alertruletype-selector on-ready="onAlertRuleTypeSelectorReady" isrequired="true"></vr-notification-alertruletype-selector>
     </vr-columns>
     <vr-columns colnum="3">
-        <vr-datetimepicker label="From" isrequired="true" value="fromDate" type="date" customvalidate="validateTimeRange()"></vr-datetimepicker>
+        <vr-datetimepicker label="From" isrequired="true" value="fromDate" type="longDateTime" customvalidate="validateTimeRange()"></vr-datetimepicker>
     </vr-columns>
 
     <vr-columns colnum="3">
-        <vr-datetimepicker label="To" isrequired="true" value="toDate" type="date" customvalidate="validateTimeRange()"></vr-datetimepicker>
+        <vr-datetimepicker label="To" isrequired="true" value="toDate" type="longDateTime" customvalidate="validateTimeRange()"></vr-datetimepicker>
     </vr-columns>
 
     <vr-columns colnum="3">
