--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
@@ -10,7 +10,7 @@
 
 <vr-row vr-loader="scopeModel.isDataAnalysisRecordFilterDirectiveLoading">
     <vr-columns width="fullrow">
-        <vr-section title="Data Analysis Filter" collapsible>
+        <vr-section title="{{scopeModel.rawRecordFilterLabel}}" collapsible>
             <vr-genericdata-recordfilter on-ready="scopeModel.onDataAnalaysisRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
         </vr-section>
     </vr-columns>
@@ -19,7 +19,7 @@
 <vr-row vr-loader="scopeModel.isRecordFilterDirectiveLoading" ng-show="scopeModel.isDataanalysisitemdefinitionSelected">
     <vr-columns width="fullrow" >
         <vr-validator default validate="scopeModel.validateRecordFilter()">
-            <vr-section title="Record Filter" collapsible>
+            <vr-section title="Analysis Filter" collapsible>
                 <vr-genericdata-recordfilter on-ready="scopeModel.onRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
             </vr-section>
         </vr-validator>
