--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/DID/Templates/DIDGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/DID/Templates/DIDGridTemplate.html
@@ -14,4 +14,7 @@
             <vr-icon icontype="dataItem.Entity.Settings.IsInternational"></vr-icon>
         </span>
     </vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
