--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductRuntime/Templates/ProductGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductRuntime/Templates/ProductGridTemplate.html
@@ -7,4 +7,7 @@
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.ProductId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
