Implementing  object tracking drilldown for cities, countries, settings, and connections
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40064

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ObjectTracking/Templates/ObjectTrackingGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ObjectTracking/Templates/ObjectTrackingGridTemplate.html
@@ -3,7 +3,9 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
-             idfield="Entity.VRObjectTrackingId">
+             idfield="Entity.VRObjectTrackingId"
+             defaultsortbyfieldname="'Entity.Time'"
+             defaultsortdirection="'DESC'">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.VRObjectTrackingId'" fixedwidth="60"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Time'" field="'Entity.Time'" type="'LongDatetime'" fixedwidth="120"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'User Name'" field="'UserName'" type="'Text'"></vr-datagridcolumn>
