--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/Settings/Templates/SettingsGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/Settings/Templates/SettingsGridTemplate.html
@@ -6,4 +6,7 @@
              idfield="Entity.SettingId">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.SettingId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
