--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRConnection/Templates/VRConnectionGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRConnection/Templates/VRConnectionGridTemplate.html
@@ -7,4 +7,7 @@
     <vr-datagridcolumn headertext="'Id'" field="'Entity.VRConnectionId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Type'" field="'TypeDescription'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
