change the display of name in tree
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40071

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/Permission/BusinessEntityManagement.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/Permission/BusinessEntityManagement.html
@@ -31,7 +31,7 @@
             <vr-columns width="1/3row">
                 <vr-treeview on-ready="onTreeReady"
                              datachildrenfield="Children"
-                             datatextfield="Name"
+                             datatextfield="Title"
                              selecteditem="currentNode"
                              onvaluechanged="onTreeValueChanged">
                 </vr-treeview>
