update with to 1/2row
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40077

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/Group/GroupEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/Group/GroupEditor.html
@@ -19,7 +19,7 @@
                                        selectedvalues="scopeModal.selectedGroupTypeTemplate" isrequired="true">
                             </vr-select>
                         </vr-columns>
-                        <vr-columns width="fullrow" vr-loader="scopeModal.isLoadingGroupType" ng-if="scopeModal.selectedGroupTypeTemplate.Editor">
+                        <vr-columns width="1/2row" vr-loader="scopeModal.isLoadingGroupType" ng-if="scopeModal.selectedGroupTypeTemplate.Editor">
                             <vr-directivewrapper directive="scopeModal.selectedGroupTypeTemplate.Editor" on-ready="scopeModal.onGroupeTypeDirectiveReady"></vr-directivewrapper>
                         </vr-columns>
                     </vr-row>
