Add missing semicolons after every statement and change the title in assign permision
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40087

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/Permission/PermissionEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/Permission/PermissionEditor.html
@@ -6,7 +6,7 @@
                     <div style="max-height:600px;overflow-y:auto">
                         <vr-treeview on-ready="onTreeReady"
                                      datachildrenfield="Children"
-                                     datatextfield="Name"
+                                     datatextfield="Title"
                                      selecteditem="currentNode"
                                      onvaluechanged="onTreeValueChanged">
                         </vr-treeview>
