--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsTemplate.html
@@ -21,15 +21,17 @@
     </vr-columns>
     <vr-columns width="3/4row">
         <vr-label></vr-label>
-        <vr-datagrid datasource="scopeModel.gridColumnDefinitions"
-                     ondeleterow="scopeModel.onDeleteRow"
-                     hidegridmenu>
+        <vr-validator validate="scopeModel.validateGrid()">
+            <vr-datagrid datasource="scopeModel.gridColumnDefinitions"
+                         ondeleterow="scopeModel.onDeleteRow"
+                         hidegridmenu>
 
-            <vr-datagridcolumn field="'FieldName'" headertext="'Grid Column Name'" disablesorting></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Grid Column Header'" disablesorting>
-                <vr-textbox value="dataItem.Header" isrequired="true"></vr-textbox>
-            </vr-datagridcolumn>
-        </vr-datagrid>
+                <vr-datagridcolumn field="'FieldName'" headertext="'Grid Column Name'" disablesorting></vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Grid Column Header'" disablesorting>
+                    <vr-textbox value="dataItem.Header" isrequired="true"></vr-textbox>
+                </vr-datagridcolumn>
+            </vr-datagrid>
+        </vr-validator>
     </vr-columns>
 </vr-span>
 
