--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SaleRate/SaleRateManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SaleRate/SaleRateManagement.html
@@ -34,7 +34,7 @@
                     <span ng-show="showCarrierAccountSelector">
                         <vr-whs-be-carrieraccount-selector on-ready="onCarrierAccountSelectorReady"
                                                            selectedvalues="selectedCustomer"
-                                                           onselectionchanged="onCarrierAccountChanged"
+                                                           onselectitem="onCustomerSelected"
                                                            getcustomers
                                                            normal-col-num="2"
                                                            hideremoveicon isrequired="showCarrierAccountSelector">
