--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/VRRestAPIRecordQueryInterceptor/Directives/MainExtensions/Templates/RetailAccountVRRestAPIRecordQueryInterceptorTemplate.html
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/VRRestAPIRecordQueryInterceptor/Directives/MainExtensions/Templates/RetailAccountVRRestAPIRecordQueryInterceptorTemplate.html
@@ -1,1 +1,3 @@
-﻿ 
+﻿<vr-columns width="1/2row">
+    <vr-textbox isrequired="true" value="scopeModel.accountFieldName" label="Account Field Name"></vr-textbox>
+</vr-columns>
