--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountPackage/Templates/AccountPackageGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountPackage/Templates/AccountPackageGridTemplate.html
@@ -3,7 +3,7 @@
              pagingtype="'PagingOnScroll'"
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions"
-             idfield="Entity.AccountPackageId">
+             idfield="Entity.AccountPackageId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Package'" field="'PackageName'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Datetime'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Datetime'"></vr-datagridcolumn>
