implementation drill down object tracking
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40137

--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/DataSourceGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/DataSourceGridTemplate.html
@@ -10,4 +10,7 @@
     <vr-datagridcolumn headertext="'Scheduler Task Enabled'" field="'Entity.IsEnabled'">
         <vr-icon icontype="dataItem.Entity.IsEnabled"></vr-icon>
     </vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
