--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/RateType/Templates/RateTypeGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/RateType/Templates/RateTypeGridTemplate.html
@@ -7,4 +7,7 @@
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.RateTypeId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
