--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRMail/Templates/VRMailMessageTemplateGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRMail/Templates/VRMailMessageTemplateGridTemplate.html
@@ -7,4 +7,7 @@
     <vr-datagridcolumn headertext="'Id'" field="'Entity.VRMailMessageTemplateId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Type Name'" field="'VRMailMessageTypeName'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
