--- a/Vanrise/Code/Vanrise.Security.Web/Security/Directives/Group/Templates/GroupGrid.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Directives/Group/Templates/GroupGrid.html
@@ -7,4 +7,7 @@
 
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
