Export to excel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40145

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountService/Templates/AccountServiceGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountService/Templates/AccountServiceGridTemplate.html
@@ -4,7 +4,7 @@
                  pagingtype="'PagingOnScroll'"
                  on-ready="scopeModel.onGridReady"
                  menuactions="scopeModel.gridMenuActions"
-                 idfield="Entity.AccountServiceId">
+                 idfield="Entity.AccountServiceId" enableautoexport="true">
         <vr-datagridcolumn headertext="'ID'" field="'Entity.AccountServiceId'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Service Type'" field="'ServiceTypeTitle'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Status'" field="'StatusDesciption'" getcolor="scopeModel.getStatusColor"></vr-datagridcolumn>
