--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
@@ -6,6 +6,12 @@
 
         </vr-analytic-dataanalysisitemdefinition-selector>
     </vr-columns>
+    <vr-columns width="1/2row" ng-show="scopeModel.isDataanalysisitemdefinitionSelected">
+        <vr-analytic-daprofcalc-outputfields-selector on-ready="scopeModel.onDataAnalysisItemOutputFieldsSelectorReady" ismultipleselection
+                                                      customlabel="Grouping Fields">
+
+        </vr-analytic-daprofcalc-outputfields-selector>
+    </vr-columns>
 </vr-row>
 
 <vr-row vr-loader="scopeModel.isDataAnalysisRecordFilterDirectiveLoading">
@@ -17,7 +23,7 @@
 </vr-row>
 
 <vr-row vr-loader="scopeModel.isRecordFilterDirectiveLoading" ng-show="scopeModel.isDataanalysisitemdefinitionSelected">
-    <vr-columns width="fullrow" >
+    <vr-columns width="fullrow">
         <vr-validator default validate="scopeModel.validateRecordFilter()">
             <vr-section title="Analysis Filter" collapsible>
                 <vr-genericdata-recordfilter on-ready="scopeModel.onRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
