--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/DataAnalysis/ProfilingAndCalculation/DAProfCalcAggregationFieldEditor.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/DataAnalysis/ProfilingAndCalculation/DAProfCalcAggregationFieldEditor.html
@@ -9,6 +9,9 @@
                         <vr-columns width="1/2row">
                             <vr-textbox label="Field Name" value="scopeModel.fieldName" isrequired="true"></vr-textbox>
                         </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-textbox label="Field Title" value="scopeModel.fieldTitle" isrequired="true"></vr-textbox>
+                        </vr-columns>
                     </vr-row>
                     <vr-row>
                         <vr-analytic-darecordaggregate-selective on-ready="scopeModel.onRecordAggregateSelectiveReady"></vr-analytic-darecordaggregate-selective>
