--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/DataAnalysis/ProfilingAndCalculation/DAProfCalcCalculationFieldEditor.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/DataAnalysis/ProfilingAndCalculation/DAProfCalcCalculationFieldEditor.html
@@ -7,6 +7,9 @@
                 <vr-columns width="1/2row">
                     <vr-textbox label="Field Name" value="scopeModel.fieldName" isrequired="true"></vr-textbox>
                 </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-textbox label="Field Title" value="scopeModel.fieldTitle" isrequired="true"></vr-textbox>
+                </vr-columns>
             </vr-row>
             <vr-row>
                 <vr-genericdata-fieldtype-selective on-ready="scopeModel.onFieldTypeSelectiveReady"></vr-genericdata-fieldtype-selective>
