--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/DataAnalysis/ProfilingAndCalculation/DAProfCalcGroupingFieldEditor.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/DataAnalysis/ProfilingAndCalculation/DAProfCalcGroupingFieldEditor.html
@@ -12,6 +12,9 @@
                                                                   hideremoveicon>
                     </vr-genericdata-datarecordtypefields-selector>
                 </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-textbox label="Field Title" value="scopeModel.fieldTitle" isrequired="true"></vr-textbox>
+                </vr-columns>
             </vr-row>
             <vr-row>
                 <vr-genericdata-fieldtype-selective on-ready="scopeModel.onFieldTypeSelectiveReady"></vr-genericdata-fieldtype-selective>
