--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Payment/Templates/PaymentConvertorEditor.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Payment/Templates/PaymentConvertorEditor.html
@@ -1,6 +1,5 @@
-﻿<vr-columns width="1/2row">
-    <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeReady" isrequired="true" hideremoveicon></vr-accountbalance-billingtransactiontype-selector>
-</vr-columns>
+﻿<vr-accountbalance-billingtransactiontype-selector normal-col-num="6" on-ready="scopeModel.onBillingTransactionTypeReady" isrequired="true" hideremoveicon></vr-accountbalance-billingtransactiontype-selector>
+
 <vr-columns width="1/2row">
     <vr-genericdata-businessentitydefinition-selector on-ready="scopeModel.onAccountDefinitionSelectorReady"
                                                       customlabel="Account Definition"
