--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/Netting/Templates/NettingDefinitionSettings.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/Netting/Templates/NettingDefinitionSettings.html
@@ -1,8 +1,4 @@
 ﻿<vr-row>
-    <vr-columns width="1/2row">
-        <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onSupplierUsageTransactionTypeReady" isrequired="true" customlabel="Supplier Usage Transaction Type"></vr-accountbalance-billingtransactiontype-selector>
-    </vr-columns>
-    <vr-columns width="1/2row">
-        <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onCustomerUsageTransactionTypeReady" isrequired="true" customlabel="Customer Usage Transaction Type"></vr-accountbalance-billingtransactiontype-selector>
-    </vr-columns>
+        <vr-accountbalance-billingtransactiontype-selector normal-col-num="6" on-ready="scopeModel.onSupplierUsageTransactionTypeReady" isrequired="true" customlabel="Supplier Usage Transaction Type"></vr-accountbalance-billingtransactiontype-selector>
+        <vr-accountbalance-billingtransactiontype-selector normal-col-num="6" on-ready="scopeModel.onCustomerUsageTransactionTypeReady" isrequired="true" customlabel="Customer Usage Transaction Type"></vr-accountbalance-billingtransactiontype-selector>
 </vr-row>
