--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/SupplierPrepaid/Templates/SupplierPrepaidDefinitionSettings.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/SupplierPrepaid/Templates/SupplierPrepaidDefinitionSettings.html
@@ -1,5 +1,3 @@
 ﻿<vr-row>
-    <vr-columns width="1/2row">
-        <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onUsageTransactionTypeReady" isrequired="true"></vr-accountbalance-billingtransactiontype-selector>
-    </vr-columns>
+        <vr-accountbalance-billingtransactiontype-selector normal-col-num="6" on-ready="scopeModel.onUsageTransactionTypeReady" isrequired="true"></vr-accountbalance-billingtransactiontype-selector>
 </vr-row>
