--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalances/Templates/AccountBalancesGridTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalances/Templates/AccountBalancesGridTemplate.html
@@ -1,10 +1,9 @@
 ﻿<vr-datagrid dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
+             defaultsortbyfieldname="scopeModel.sortField"
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions"
              datasource="scopeModel.accountBalances" defaultsortbyfieldname="'Entity.CurrentBalance'" defaultsortdirection="ctrl.orderBy">
-    <vr-datagridcolumn headertext="'ID'" field="'Entity.AccountBalanceId'" fixedwidth="'50'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Account'" field="'AccountInfo.Name'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Current Balance'" field="'Entity.CurrentBalance'" type="'Number'"  numberprecision="'NormalPrecision'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Currency'" field="'CurrencyDescription'" ></vr-datagridcolumn>
+    <vr-datagridcolumn ng-repeat="field in gridFields" columnattributes="field">
+    </vr-datagridcolumn>
 </vr-datagrid>
