--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/QueueActivators/Templates/QueueActivatorUpdateAccountBalancesTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/QueueActivators/Templates/QueueActivatorUpdateAccountBalancesTemplate.html
@@ -4,12 +4,13 @@
                                             selectedvalues="scopeModel.selectedAccountType"
                                             isrequired="true" normal-col-num="4">
     </vr-accountbalance-accounttype-selector>
-    <vr-columns width="1/3row">
-        <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady"
-                                                           selectedvalues="scopeModel.selectedBillingTransactionType"
-                                                           isrequired="true">
-        </vr-accountbalance-billingtransactiontype-selector>
-    </vr-columns>
+
+    <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady"
+                                                        selectedvalues="scopeModel.selectedBillingTransactionType"
+                                                        isrequired="true"
+                                                        normal-col-num="4">
+    </vr-accountbalance-billingtransactiontype-selector>
+  
     <vr-columns width="fullrow">
         <vr-row>
             <vr-columns width="fullrow" vr-loader="scopeModel.isGridLoading">
