--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/BillingTransaction/BillingTransactionEditor.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/BillingTransaction/BillingTransactionEditor.html
@@ -9,9 +9,9 @@
                         </vr-columns>
                         <vr-accountbalance-account-selector  on-ready="scopeModel.onAccountDirectiveReady" normal-col-num="6" ng-if="scopeModel.showAccountSelector" isrequired="true"></vr-accountbalance-account-selector>
                         <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" isrequired="true" normal-col-num="6"></vr-common-currency-selector>
-                        <vr-columns width="1/2row">
-                            <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeReady" isrequired="true" hideremoveicon></vr-accountbalance-billingtransactiontype-selector>
-                        </vr-columns>
+                
+                        <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeReady" isrequired="true" normal-col-num="6" hideremoveicon></vr-accountbalance-billingtransactiontype-selector>
+                     
                         <vr-columns width="1/2row">
                             <vr-textbox label="reference" value="scopeModel.reference" isrequired="true"></vr-textbox>
                         </vr-columns>
