--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertRuleType/VRAlertRuleTypeEditor.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertRuleType/VRAlertRuleTypeEditor.html
@@ -19,7 +19,29 @@
                             </vr-select>
                         </vr-columns>
                     </vr-row>
-
+                </vr-tab>
+                <vr-tab header="'Security'">
+                    <vr-row>
+                        <vr-columns width="fullrow">
+                            <vr-section header="View">
+                                <vr-sec-requiredpermission-grid on-ready="scopeModel.onViewRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                            </vr-section>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row>
+                        <vr-columns width="fullrow">
+                            <vr-section header="Add">
+                                <vr-sec-requiredpermission-grid on-ready="scopeModel.onAddRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                            </vr-section>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row>
+                        <vr-columns width="fullrow">
+                            <vr-section header="Edit">
+                                <vr-sec-requiredpermission-grid on-ready="scopeModel.onEditRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                            </vr-section>
+                        </vr-columns>
+                    </vr-row>
                 </vr-tab>
                 <vr-directivewrapper ng-if="scopeModel.selectedTemplateConfig != undefined" directive="scopeModel.selectedTemplateConfig.Editor" on-ready="scopeModel.onDirectiveReady">
                 </vr-directivewrapper>
